force-app/main/default/objects/Badge__c.object
<CustomObject>
    <label>Badge</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>