force-app/main/default/objects/Badge__c/fields/Icon_Link__c.field-meta.xml
<CustomField>
    <fullName>Icon_Link__c</fullName>
    <label>Icon Link</label>
    <type>Url</type>
</CustomField>