force-app/main/default/objects/Badge__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>Link to badge on Trailhead.</description>
    <label>Path</label>
    <type>Url</type>
</CustomField>