force-app/main/default/objects/Badge__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The full title of the Badge taken from Trailhead.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>