force-app/main/default/objects/Badge__c/fields/Trailblazer__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer__c</fullName>
    <label>Trailblazer</label>
    <referenceTo>Trailblazer__c</referenceTo>
    <relationshipLabel>Badges</relationshipLabel>
    <relationshipName>Badges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>