force-app/main/default/objects/Badge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trailblazer__c</columns>
    <columns>Date_Earned__c</columns>
    <columns>Points__c</columns>
    <columns>Type__c</columns>
    <columns>Icon_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>